Removed unused JLA, SharedSecrets, added @enablePreview test annotation